src/objects/AssetHistory__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>AssetHistory</relationshipLabel>
        <relationshipName>AssetHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>AssetHistory</label>
    <nameField>
        <label>AssetHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AssetHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>